--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
+    "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
